--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "br.com.rads.nasathings"
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
 
-        debug{
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "String", "NASA_API_KEY", '"FwWP1DRzvglWGJiM0SRMM1WviDXRqAbVgbBsclq5"'
@@ -25,13 +25,27 @@ android {
             buildConfigField "String", "NASA_API_KEY", '"FwWP1DRzvglWGJiM0SRMM1WviDXRqAbVgbBsclq5"'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
+
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
+
+    compile 'com.android.support:palette-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
@@ -39,4 +53,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.jonisaa:MaterialCalendarview:v1.2.2'
 }
