--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+
+        maven {
+            url "https://jitpack.io"
+        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0-alpha4'
@@ -15,6 +20,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
